google sign-in button added and connected to the google platform API

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="google-signin-client_id" content="896013867387-ltnfg30uau25jqguvdd35v1ubp35u58l.apps.googleusercontent.com">
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,8 +15,8 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>React App</title>
   <script src="https://kit.fontawesome.com/6c640a55a3.js" crossorigin="anonymous"></script>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
-
 <body>
   <div id="root">
 </body>
